// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkflowTemplateForm should match snapshot 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class="ant-form-item-required"
          for="name"
          title="workflowTemplate.form.label.name"
        >
          workflowTemplate.form.label.name
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <input
              class="ant-input"
              id="name"
              placeholder="common.form.placeholder.input"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class=""
          for="desc"
          title="workflowTemplate.form.label.desc"
        >
          workflowTemplate.form.label.desc
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <textarea
              class="ant-input textarea-no-resize"
              id="desc"
              placeholder="common.form.placeholder.input"
              rows="3"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item ant-form-item-has-success"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class=""
          for="allowSubmitWhenLessAuditLevel"
          title="workflowTemplate.form.label.allowSubmitWhenLessAuditLevel"
        >
          workflowTemplate.form.label.allowSubmitWhenLessAuditLevel
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-select ant-select-single ant-select-show-arrow"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="allowSubmitWhenLessAuditLevel_list_0"
                    aria-autocomplete="list"
                    aria-controls="allowSubmitWhenLessAuditLevel_list"
                    aria-haspopup="listbox"
                    aria-owns="allowSubmitWhenLessAuditLevel_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    id="allowSubmitWhenLessAuditLevel"
                    readonly=""
                    role="combobox"
                    style="opacity: 0;"
                    type="search"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-item"
                  title="warn"
                >
                  warn
                </span>
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select: none;"
                unselectable="on"
              >
                <span
                  aria-label="down"
                  class="anticon anticon-down ant-select-suffix"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class=""
          for="instanceNameList"
          title="workflowTemplate.form.label.instanceNameList"
        >
          workflowTemplate.form.label.instanceNameList
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-select ant-select-multiple ant-select-show-search"
            >
              <div
                class="ant-select-selector"
              >
                <div
                  class="ant-select-selection-overflow"
                >
                  <div
                    class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                    style="opacity: 1;"
                  >
                    <div
                      class="ant-select-selection-search"
                      style="width: 0px;"
                    >
                      <input
                        aria-activedescendant="instanceNameList_list_0"
                        aria-autocomplete="list"
                        aria-controls="instanceNameList_list"
                        aria-haspopup="listbox"
                        aria-owns="instanceNameList_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="instanceNameList"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                      <span
                        aria-hidden="true"
                        class="ant-select-selection-search-mirror"
                      >
                        
                         
                      </span>
                    </div>
                  </div>
                </div>
                <span
                  class="ant-select-selection-placeholder"
                >
                  common.form.placeholder.select
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class="ant-form-item-no-colon"
          title=" "
        >
           
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                <button
                  class="ant-btn"
                  type="button"
                >
                  <span>
                    common.reset
                  </span>
                </button>
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-primary"
                  type="button"
                >
                  <span>
                    common.nextStep
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`WorkflowTemplateForm should match snapshot 2`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-row ant-form-item ant-form-item-has-success"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class="ant-form-item-required"
          for="name"
          title="workflowTemplate.form.label.name"
        >
          workflowTemplate.form.label.name
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <input
              class="ant-input ant-input-disabled"
              disabled=""
              id="name"
              placeholder="common.form.placeholder.input"
              type="text"
              value="name1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item ant-form-item-has-success"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class=""
          for="desc"
          title="workflowTemplate.form.label.desc"
        >
          workflowTemplate.form.label.desc
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <textarea
              class="ant-input textarea-no-resize"
              id="desc"
              placeholder="common.form.placeholder.input"
              rows="3"
            >
              desc1
            </textarea>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item ant-form-item-has-success"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class=""
          for="allowSubmitWhenLessAuditLevel"
          title="workflowTemplate.form.label.allowSubmitWhenLessAuditLevel"
        >
          workflowTemplate.form.label.allowSubmitWhenLessAuditLevel
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-select ant-select-single ant-select-show-arrow"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="allowSubmitWhenLessAuditLevel_list_0"
                    aria-autocomplete="list"
                    aria-controls="allowSubmitWhenLessAuditLevel_list"
                    aria-haspopup="listbox"
                    aria-owns="allowSubmitWhenLessAuditLevel_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    id="allowSubmitWhenLessAuditLevel"
                    readonly=""
                    role="combobox"
                    style="opacity: 0;"
                    type="search"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-placeholder"
                >
                  common.form.placeholder.select
                </span>
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select: none;"
                unselectable="on"
              >
                <span
                  aria-label="down"
                  class="anticon anticon-down ant-select-suffix"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item ant-form-item-has-success"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class=""
          for="instanceNameList"
          title="workflowTemplate.form.label.instanceNameList"
        >
          workflowTemplate.form.label.instanceNameList
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-select ant-select-multiple ant-select-show-search"
            >
              <div
                class="ant-select-selector"
              >
                <div
                  class="ant-select-selection-overflow"
                >
                  <div
                    class="ant-select-selection-overflow-item"
                    style="opacity: 1;"
                  >
                    <span
                      class="ant-select-selection-item"
                    >
                      <span
                        class="ant-select-selection-item-content"
                      >
                        name1
                      </span>
                      <span
                        aria-hidden="true"
                        class="ant-select-selection-item-remove"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="close"
                          class="anticon anticon-close"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="close"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </div>
                  <div
                    class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                    style="opacity: 1;"
                  >
                    <div
                      class="ant-select-selection-search"
                      style="width: 0px;"
                    >
                      <input
                        aria-activedescendant="instanceNameList_list_0"
                        aria-autocomplete="list"
                        aria-controls="instanceNameList_list"
                        aria-haspopup="listbox"
                        aria-owns="instanceNameList_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="instanceNameList"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                      <span
                        aria-hidden="true"
                        class="ant-select-selection-search-mirror"
                      >
                        
                         
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class="ant-form-item-no-colon"
          title=" "
        >
           
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                <button
                  class="ant-btn"
                  type="button"
                >
                  <span>
                    common.reset
                  </span>
                </button>
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-primary"
                  type="button"
                >
                  <span>
                    common.nextStep
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`WorkflowTemplateForm should reset all fields when user click rest button 1`] = `
<div>
  <form
    class="ant-form ant-form-horizontal"
  >
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class="ant-form-item-required"
          for="name"
          title="workflowTemplate.form.label.name"
        >
          workflowTemplate.form.label.name
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <input
              class="ant-input"
              id="name"
              placeholder="common.form.placeholder.input"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class=""
          for="desc"
          title="workflowTemplate.form.label.desc"
        >
          workflowTemplate.form.label.desc
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <textarea
              class="ant-input textarea-no-resize"
              id="desc"
              placeholder="common.form.placeholder.input"
              rows="3"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class=""
          for="allowSubmitWhenLessAuditLevel"
          title="workflowTemplate.form.label.allowSubmitWhenLessAuditLevel"
        >
          workflowTemplate.form.label.allowSubmitWhenLessAuditLevel
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-select ant-select-single ant-select-show-arrow"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="allowSubmitWhenLessAuditLevel_list_0"
                    aria-autocomplete="list"
                    aria-controls="allowSubmitWhenLessAuditLevel_list"
                    aria-haspopup="listbox"
                    aria-owns="allowSubmitWhenLessAuditLevel_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    id="allowSubmitWhenLessAuditLevel"
                    readonly=""
                    role="combobox"
                    style="opacity: 0;"
                    type="search"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-placeholder"
                >
                  common.form.placeholder.select
                </span>
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select: none;"
                unselectable="on"
              >
                <span
                  aria-label="down"
                  class="anticon anticon-down ant-select-suffix"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class=""
          for="instanceNameList"
          title="workflowTemplate.form.label.instanceNameList"
        >
          workflowTemplate.form.label.instanceNameList
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-select ant-select-multiple ant-select-show-search"
            >
              <div
                class="ant-select-selector"
              >
                <div
                  class="ant-select-selection-overflow"
                >
                  <div
                    class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                    style="opacity: 1;"
                  >
                    <div
                      class="ant-select-selection-search"
                      style="width: 0px;"
                    >
                      <input
                        aria-activedescendant="instanceNameList_list_0"
                        aria-autocomplete="list"
                        aria-controls="instanceNameList_list"
                        aria-haspopup="listbox"
                        aria-owns="instanceNameList_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="instanceNameList"
                        readonly=""
                        role="combobox"
                        style="opacity: 0;"
                        type="search"
                        unselectable="on"
                        value=""
                      />
                      <span
                        aria-hidden="true"
                        class="ant-select-selection-search-mirror"
                      >
                        
                         
                      </span>
                    </div>
                  </div>
                </div>
                <span
                  class="ant-select-selection-placeholder"
                >
                  common.form.placeholder.select
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item"
    >
      <div
        class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
      >
        <label
          class="ant-form-item-no-colon"
          title=" "
        >
           
        </label>
      </div>
      <div
        class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                <button
                  ant-click-animating-without-extra-node="false"
                  class="ant-btn"
                  type="button"
                >
                  <span>
                    common.reset
                  </span>
                </button>
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn ant-btn-primary"
                  type="button"
                >
                  <span>
                    common.nextStep
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
